<resources>
    <string name="app_name">ProjLolPam</string>
    <string name="background_login">Background Login</string>
    <string name="logo">Logo</string>
    <string name="league_of_legends">LEAGUE OF LEGENDS</string>
    <string name="nickname">NICKNAME</string>
    <string name="inserir_nickname">Inserir Nickname</string>
    <string name="regiao">REGIÃO</string>
    <string name="entrar">Entrar</string>
    <string name="background_home">Background Home</string>
    <string name="como_usar_titulo">COMO USAR</string>
    <string name="como_usar_texto">
        Após baixar esse aplicativo, é de extrema importância que você saiba a utilidade e como utiliza-lo.<br />
        Criamos esse aplicativo com a intenção de auxiliar você com os seus campeões favoritos, suas builds e compreender cada item e sua utilidade.<br />
        Clicando em campeões, você será direcionado para a página com todos os ícones e poderá clicar, com uma página que falará brevemente sobre ele, builds e runas com maior taxa de vitória. Na página de itens, você encontrará o que ele faz, o tipo e também os campeões que usam. Dentro de cada uma delas, ao clicar sobre o ícone do campeão ou item, será direcionado para a página também.<br />
        Abaixo, você poderá acessar ao site do Porofessor, enviar um ticket por e-mail e o compartilhar o aplicativo através do WhatsApp com seusa amigos! Não esqueça de acessar nosso site, invocador!
    </string>
    <string name="botao_porofessor">Botão Porofessor</string>
    <string name="botao_email">Botão Email</string>
    <string name="botao_whatsapp">Botão Whatsapp</string>
    <string name="botao_home">Botão Home</string>
    <string name="botao_campeoes">Botão Campeões</string>
    <string name="botao_itens">Botão Icones</string>
    <string name="text_olainvocador">Olá %1$s!</string>

    <string name="text_buildgeral">BUILD GERAL</string>
    <string name="text_runageral">RUNA GERAL</string>
    <string name="text_mecanica">MECÂNICA</string>
    <string name="text_campeoesrecomendados">CAMPEÕES RECOMENDADOS</string>

    <!-- ITENS -->
    <string name="item_arcoescudoimortal">Arco-Escudo Imortal</string>
    <string name="item_arcoescudoimortal_sobre">
        Custando 3400 na loja, o Arco-Escudo Imortal (ou imoral) entrega 55 de dano de ataque, 20% de velocidade de ataque, 20% de chance de acerto crítico e 10% de roubo de vida, sendo essencial para campeões que precisam sobreviver antes de serem letais, tanto contra campeões que causam dano explosivo na lane phase quanto para TeamFights.<br />
        Sua passiva (Salva-Vidas) fornece um escudo ao sofrer dano que reduziria sua vida a menos de 30% e 15% de roubo de vida extra.
    </string>

    <string name="item_grevasdoberserker">Grevas do Berserker</string>
    <string name="item_laminadafuriadeguinsoo">Lâmina Furia de Guinsoo</string>
    <string name="item_furacaoderunaan">Furacão de Runaan</string>
    <string name="item_sedentaporsangue">Sedenta por Sangue</string>
    <string name="item_espadadoreidestruido">Espada do Rei Destruido</string>

    <string name="item_dentedenashor">Dente de NaShor</string>
    <string name="item_dentedenashor_sobre">
        Utilizado em campeões de dano mágico, o Dente de NaShor traz diversos benefícios, custando 3000 na loja.<br />
        Dentre os benefícios concebidos, são: 100 de Poder de Habilidade Concebido + 50% na velocidade de ataque, muito útil nas TeamFights, pois enquanto suas habilidades estão em couldown, você punirá o inimigo com seus ataques básicos.<br />
        Esse dano se dará graças a passiva do item, que é a Mordida Icathiana, que causam de 15 a 20% de dano mágico ao contato acumulado conforme os minutos da passiva passam e abates e assistências.
    </string>

    <string name="item_sapatosdofeiticeiro">Sapatos do Feiticeiro</string>
    <string name="item_ampulhetadezhonya">Ampulheta de Zhonya</string>
    <string name="item_aeropropulsoraprimorado">Aero Propulsor Aprimorado</string>
    <string name="item_capuzdamortederabadon">Capuz da Morte de Rabadon</string>
    <string name="item_ladraodealmasdemejai">Ladrão de Almas de Mejai</string>
    <string name="item_aquafluxo">Aquafluxo</string>
    <string name="item_criafendas">Criafendas</string>
    <string name="item_cronometro">Cronômetro</string>
    <string name="item_gumedoinfinito">Gume do Infinito</string>
    <string name="item_hinobelicodeshurelya">Hino Bélico de Shurelya</string>
    <string name="item_impetocosmico">Ímpeto Cósmico</string>
    <string name="item_lamentodeliandry">Lamento de Liandry</string>
    <string name="item_lembretemortal">Lembrete Mortal</string>
    <string name="item_morellonomicon">Morellonomicon</string>
    <string name="item_sufocamentogelido">Sufocamento Gélido</string>


    <!-- RUNAS -->
    <string name="runa_chuvadelaminas">Chuva de Lâminas</string>
    <string name="runa_gostodesangue">Gosto de Sangue</string>
    <string name="runa_globosoculares">Globos Oculares</string>
    <string name="runa_cacavoraz">Caça Voraz</string>
    <string name="runa_precisao">Precisão</string>
    <string name="runa_triunfo">Triunfo</string>
    <string name="runa_lendaespontaneidade">Lenda: Espontaneidade</string>
    <string name="runa_ataque2">Ataque 2</string>
    <string name="runa_flex1">Flex 1</string>
    <string name="runa_defesa2">Defesa 2</string>
    <string name="runa_conquistador">Conquistador</string>
    <string name="runa_lendadetenacidade">Lenda de Tenacidade</string>
    <string name="runa_golpedemisericordia">Golpe de Misericordia</string>
    <string name="runa_dominacao">Dominação</string>
    <string name="runa_impactorepentino">Conquistador</string>

    <!-- CAMPEÕES -->
    <string name="champ_akali">AKALI</string>
    <string name="champ_aphelios">APHELIOS</string>
    <string name="champ_camille">CAMILLE</string>
    <string name="champ_diana">DIANA</string>
    <string name="champ_gwen">GWEN</string>
    <string name="champ_irelia">IRELIA</string>
    <string name="champ_jinx">JINX</string>
    <string name="champ_teemo">TEEMO</string>
    <string name="champ_twitch">TWITCH</string>

    <string name="champ_kalista">KALISTA</string>
    <string name="champ_kalista_frase">A LANÇA DA VINGANÇA</string>
    <string name="champ_kalista_mecanica">
        "Uma Kalista bem jogada faz 1v5"<br />

        Mais que qualquer outro atirador, a Kalista tem um extremo potencial de cait. A cada ataque básico, seu próximo movimento será um dash que tem inúmeras utilidades!<br />
        Durante a lane phase no early game use o E para garantir minions quando necessário, fique tranquilo, caso ele mate será resetado e você receberá parte de sua mana de volta! Para pokear com ele, estaque uma lança num minion, estaque nos inimigos e pressione E quando ver que o minion morrerá!<br />
        Caso esteja em perseguição ou sendo perseguido, use o na direção do inimigo, ele te dará o dash, que inclusive, é capaz de atravessar algumas paredes, experimente!<br />
        Lembre sempre também que você tem o W à sua disposição… ele pode te dar, por exemplo, visão do jungler inimigo, pode salvar sua vida.<br />
        Quando seu aliado em juramento estiver prestes a morrer, não exite em salvá-lo com sua ult, isso o deixará inalvejável e capaz de saltar para um local dentro da área de sua habilidade.<br />
        Por ultimo e não menos importante: CAITA, CAITA, CAITA!<br />
        - by TaveiraTavel
    </string>

    <string name="champ_katarina">KATARINA</string>
    <string name="champ_katarina_frase">A LÂMINA SINISTRA</string>
    <string name="champ_katarina_mecanica">
        Katarina tem uma mecânica conhecida como complexa, nada que com um pouco de treino você não consiga aprender.<br />
        Para farmar na lane, o combo clean wave é Q + E + W;<br />
        Na lane phase, ou em lutas de 1v1 contra seu inimigo, um combo que você pode utilizar para pegar seu inimigo de surpresa é E + W + Q + E + R e, se necessário, ignite, caso perceba que o inimigo saia vivo;<br />
        Em uma TeamFight, busque se posicionar juntamente com seu AdCarry (principalmente se o time inimigo tiver muito cc), espere os colegas de time iniciarem e, ao ver metade da vida retirada, use E + R, Q + E + W no inimigo que está prestes a fugir e, se necessário, use ignite se caso perceber que um há muita chance de fugir;<br />
        Alguns monos Katarina preferem usar feitiços como tp e ignite, ou em lanes muito complicadas (como Zed, Lucian e Fizz) exhaust e ignite, utilizando do E (que concede velocidade) para fugir juntamente com seu E. Mas, não lhe impede de utilizar o Flash, caso não tenha tanta segurança assim.<br />
        - By LetyResinaa, mono Katarina
    </string>

    <string name="champ_kayn">KAYN</string>
    <string name="champ_leblanc">LEBLANC</string>
    <string name="champ_morgana">MORGANA</string>
    <string name="champ_neeko">NEEKO</string>
    <string name="champ_nidalee">NIDALEE</string>
    <string name="champ_pyke">PYKE</string>
    <string name="champ_qiyana">QIYANA</string>
    <string name="champ_riven">RIVEN</string>
    <string name="champ_sett">SETT</string>
    <string name="champ_yasuo">YASUO</string>
    <string name="champ_yone">YONE</string>
    <string name="champ_zed">ZED</string>

    <string name="lorem_ipsun">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non commodo arcu. Integer hendrerit feugiat luctus. Nulla tincidunt enim in turpis tincidunt, et condimentum<br />
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non commodo arcu. Integer hendrerit feugiat luctus. Nulla tincidunt enim in turpis tincidunt, et condimentum<br />
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non commodo arcu. Integer hendrerit feugiat luctus. Nulla tincidunt enim in turpis tincidunt, et condimentum
    </string>

    <!-- INVOCADOR -->
    <string name="invocador_nickname">%1$s</string>
    <string name="invocador_regiao">%1$s</string>
    <string name="invocador_imagem">INVOCADOR</string>
    <string name="text_configuracaogeral">CONFIGURAÇÃO GERAL</string>
    <string name="lighttexto">DARK MODE</string>
    <string name="lighttexto2">AUTOMÁTICO</string>
    <string name="text_btndeslogar">SAIR</string>

    <!-- ANOTAÇÕES DO USUÁRIO -->
    <string name="text_anotacoes">ANOTAÇÕES</string>
    <string name="text_btnsavenotes">Salvar</string>

</resources>