<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItensActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_home"
        android:scaleType="centerCrop"
        android:scrollX="-240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagemprojeto2" />

    <LinearLayout
        android:id="@+id/linearCabecalho"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:background="@color/preto_cabecalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBackground">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/applogo" />

        <ImageButton
            android:id="@+id/imgbtnHome"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/botao_home"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/imghome"

            android:onClick="abrirHomeActivity" />

        <ImageButton
            android:id="@+id/imgbtnCampeoes"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/botao_campeoes"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/imgcampeoes"

            android:onClick="abrirCampeoesActivity" />

        <ImageButton
            android:id="@+id/imgbtnItens"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/botao_itens"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/imgitens" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeBorda1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/cabecalho"
        app:layout_constraintEnd_toEndOf="@+id/linearCabecalho"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearCabecalho"
        app:layout_constraintTop_toTopOf="@+id/linearCabecalho">

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/branco_container"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeBorda1"
        android:scrollbars="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_aeropropulsoraprimorado"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgaeropropulsoraprimorado" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_ampulhetadezhonya"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgampulhetadezonya" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_aquafluxo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgcajadoaquafluxo" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_capuzdamortederabadon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgcapuzdamortederabadon" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_criafendas"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgcriafendas" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_cronometro"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgcronometro" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_dentedenashor"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgdentedenashor" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_espadadoreidestruido"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgespadadoreidestruido" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_furacaoderunaan"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgfuracaoderunaan" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_grevasdoberserker"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imggrevasdoberserker" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_gumedoinfinito"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imggumedoinfinito" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_hinobelicodeshurelya"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imghinobelicodeshurelya" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_impetocosmico"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgimpetocosmico" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_ladraodealmasdemejai"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgladraodealmasdemejai" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_lamentodeliandry"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imglamentodeliandry" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_laminadafuriadeguinsoo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imglaminadafuriadeguinsoo" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_lembretemortal"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imglembretemortal" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_morellonomicon"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgmorellonomicon" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_sapatosdofeiticeiro"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgsapatosdofeiticeiro" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_sedentaporsangue"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgsedentaporsangue" />

                <ImageButton
                    android:layout_weight="1"
                    android:layout_height="98dp"
                    android:layout_width="80dp"
                    android:background="@android:color/background_dark"
                    android:contentDescription="@string/item_sufocamentogelido"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/imgsufocamentogelido" />

            </TableRow>

        </TableLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeBorda2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/cabecalho"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scrollContainer"
        app:layout_constraintTop_toTopOf="@+id/scrollContainer">

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>