<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:contentDescription="@string/background_login"
        android:scaleType="centerCrop"
        android:scrollX="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/imagemprojeto" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@color/preto_cabecalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/applogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:fontFamily="@font/alegreya_sans_sc"
            android:letterSpacing=".17"
            android:text="@string/league_of_legends"
            android:textColor="@color/branco_textcabecalho"
            android:textSize="22sp"
            android:typeface="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/cabecalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

    </LinearLayout>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="210dp"
        tools:ignore="LabelFor"
        android:autofillHints=""
        android:layout_height="39dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/preto_texto"
        android:textColorHighlight="preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <TextView
        android:id="@+id/nickText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/alegreya_sans_sc"
        android:letterSpacing=".17"
        android:text="@string/nickname"
        android:textColor="@color/branco_textcabecalho"
        android:textSize="22sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/nickname"
        app:layout_constraintEnd_toEndOf="@+id/nickname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/botaoEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botao"
        android:text="@string/entrar"
        android:textColor="@color/marrom_textobtn"
        app:backgroundTint=""
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/nickname"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintVertical_bias="0.129" />


</androidx.constraintlayout.widget.ConstraintLayout>